deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-production-api
  labels:
    app.kubernetes.io/part-of: fastapi-production-api
